--- a/src/ru/gurps/generator/resources/bundles/generator_ru.properties
+++ b/src/ru/gurps/generator/resources/bundles/generator_ru.properties
@@ -5,9 +5,9 @@ advantages_and_perks = \u043F\u0440\u0435\u0438\u043C\u0443\u0449\u0435\u0441\u0
 advantages_not_found = \u043F\u0440\u0435\u0438\u043C\u0443\u0449\u0435\u0441\u0442\u0432 \u043D\u0435\u0442
 age = \u0432\u043E\u0437\u0440\u0430\u0441\u0442
 air = \u0432\u043E\u0437\u0434\u0443\u0445
-app_name_user_select = GURPS Generator - \u0412\u044B\u0431\u043E\u0440 \u043F\u0435\u0440\u0441\u043E\u043D\u0430\u0436\u0430
+app_name_character_select = GURPS Generator - \u0412\u044B\u0431\u043E\u0440 \u043F\u0435\u0440\u0441\u043E\u043D\u0430\u0436\u0430
 app_is_running = \u041F\u0440\u0438\u043B\u043E\u0436\u0435\u043D\u0438\u0435 \u0443\u0436\u0435 \u0437\u0430\u043F\u0443\u0449\u0435\u043D\u043E!
-app_user_sheet = GURPS Generator - \u041B\u0438\u0441\u0442 \u043F\u0435\u0440\u0441\u043E\u043D\u0430\u0436\u0430
+app_character_sheet = GURPS Generator - \u041B\u0438\u0441\u0442 \u043F\u0435\u0440\u0441\u043E\u043D\u0430\u0436\u0430
 area = \u043E\u0431\u043B\u0430\u0441\u0442\u043D\u043E\u0435
 area_multi = \u043E\u0431\u043B\u0430\u0441\u0442\u043D\u044B\u0435
 arms = \u0440\u0443\u043A\u0438
@@ -205,7 +205,7 @@ types = \u0442\u0438\u043F\u044B
 upload = \u0432\u044B\u0433\u0440\u0443\u0437\u0438\u0442\u044C
 upload_jok_sheet_xlsx = \u0432\u044B\u0433\u0440\u0443\u0437\u0438\u0442\u044C Jok .xlsx
 upload_sheet_json = \u0432\u044B\u0433\u0440\u0443\u0437\u0438\u0442\u044C .json
-users_not_found = \u041F\u0435\u0440\u0441\u043E\u043D\u0430\u0436\u0435\u0439 \u043D\u0435 \u0441\u043E\u0437\u0434\u0430\u043D\u043E
+characters_not_found = \u041F\u0435\u0440\u0441\u043E\u043D\u0430\u0436\u0435\u0439 \u043D\u0435 \u0441\u043E\u0437\u0434\u0430\u043D\u043E
 usual = \u043E\u0431\u044B\u0447\u043D\u043E\u0435
 usual_multi = \u043E\u0431\u044B\u0447\u043D\u044B\u0435
 weight = \u0432\u0435\u0441
