--- a/src/ru/gurps/generator/resources/bundles/generator_ru.properties
+++ b/src/ru/gurps/generator/resources/bundles/generator_ru.properties
@@ -207,6 +207,8 @@ two_hands_colon = \u0442\u0440\u0435\u0431\u0443\u0435\u0442 \u043E\u0431\u0435 
 type = \u0442\u0438\u043F
 type_colon = \u0442\u0438\u043F: 
 types = \u0442\u0438\u043F\u044B
+update.accept = \u043F\u0440\u0438\u043D\u044F\u0442\u044C \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
+update.cancel = \u043E\u0442\u043C\u0435\u043D\u0438\u0442\u044C
 upload = \u0432\u044B\u0433\u0440\u0443\u0437\u0438\u0442\u044C
 upload_jok_sheet_xlsx = \u0432\u044B\u0433\u0440\u0443\u0437\u0438\u0442\u044C Jok .xlsx
 upload_sheet_json = \u0432\u044B\u0433\u0440\u0443\u0437\u0438\u0442\u044C .json
